--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>pomodoro timer</title>
+    <title>time sprint</title>
     
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -24,7 +24,7 @@
     
     <div class="wrapper">
       <div class="container">
-        <h1>pomodoro timer</h1>
+        <h1>time sprint</h1>
 
         <div class="toggle">
           <p id="work">work</p>
